tests/baselines/reference/unicodeExtendedEscapesInStrings03_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings03_ES5.ts(2,12): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings03_ES5.ts (1 errors) ====
    
    var x = "\u{0000}";
               
!!! error TS1125: Hexadecimal digit expected.
    